force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case__mdt/PJN_Care_Plan_Timeline_Case__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Care Plan Timeline
Purpose: Define status and icon for cases to be displayed on the care plan activity timeline sidebar.
Metadata Relationship(s): Program, Care Plan Timeline Case Field
Created by Mavens: Yes</description>
    <label>Care Plan Timeline Case</label>
    <pluralLabel>Care Plan Timeline Cases</pluralLabel>
</CustomObject>