force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case__mdt/fields/PJN_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>closed</fullName>
                <default>true</default>
                <label>closed</label>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>planned</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>