force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case__mdt/fields/PJN_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Icon_Name__c</fullName>
    <label>Icon Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>