force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case__mdt/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <label>Program</label>
    <referenceTo>PJN_Program__mdt</referenceTo>
    <relationshipLabel>Care Plan Timeline Cases</relationshipLabel>
    <relationshipName>PJN_Care_Plan_Timeline_Cases</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>