force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case__mdt/listViews/PJN_All_Timeline_Cases.listView-meta.xml
<ListView>
    <fullName>PJN_All_Timeline_Cases</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Program__c</columns>
    <columns>PJN_Activity_Type__c</columns>
    <columns>PJN_Icon_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Timeline Cases</label>
    <language>en_US</language>
</ListView>